<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SmsRegistration">

    <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <View
            android:id="@+id/layout_left"
            android:layout_width="15dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        </View>

        <View
            android:id="@+id/layout_right"
            android:layout_width="15dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        </View>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sms_toggle_text"
            android:text="@string/toggle_sms"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="@dimen/item_padding"
            app:layout_constraintLeft_toRightOf="@+id/layout_left"
            app:layout_constraintTop_toTopOf="parent"
            >
        </TextView>

        <TextView
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:id="@+id/sms_description"
            app:layout_constraintTop_toBottomOf="@id/sms_toggle_text"
            app:layout_constraintLeft_toRightOf="@id/layout_left"
            app:layout_constraintRight_toLeftOf="@id/layout_right"
            android:layout_marginTop="15dp"
            android:text="@string/sms_notice"
            android:layout_marginStart="15dp">

        </TextView>


        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sms_toggle"
            android:theme="@style/switchSettings"
            app:layout_constraintRight_toLeftOf="@id/layout_right"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/sms_toggle_text"
            android:layout_marginTop="13dp"
            android:checked="false">
        </androidx.appcompat.widget.SwitchCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/phone_options"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phone_number_query"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/phone_number"
            android:textSize="20sp"
            android:text="@string/enter_phone"
            >
        </TextView>

        <EditText
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:id="@+id/phone_number"
            android:inputType="number"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/minimum_quantity_query"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textAlignment="center"
            android:hint="@string/phone_hint"
            >
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/minimum_quantity_query"
            android:text="@string/low_inventory"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/minimum_quantity">

        </TextView>

        <EditText
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/minimum_quantity"
            android:inputType="number"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginBottom="100dp"
            android:hint="@string/quantity_hint"
            >

        </EditText>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="25dp"
            android:text="@string/save_changes"
            android:onClick="saveSMSClick"
            android:enabled="false">
        </Button>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>